RESOLVED FIXED 239291
[web-animations] REGRESSION(r291527): assertion hit during teardown of document with CSS Animations
https://bugs.webkit.org/show_bug.cgi?id=239291
Summary [web-animations] REGRESSION(r291527): assertion hit during teardown of docume...
Antoine Quint
Reported 2022-04-13 11:51:53 PDT
Attachments
Patch (5.92 KB, patch)
2022-04-13 12:36 PDT, Antoine Quint
dino: review+
ews-feeder: commit-queue-
Antoine Quint
Comment 1 2022-04-13 12:36:01 PDT
Dean Jackson
Comment 2 2022-04-13 12:39:42 PDT
Comment on attachment 457559 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=457559&action=review > LayoutTests/webanimations/css-animation-resolution-during-teardown.html:33 > + if (!window.location.search) tricky!
Antoine Quint
Comment 3 2022-04-13 23:11:38 PDT
Note You need to log in before you can comment on or make changes to this bug.