Source/WebCore/animation/AnimationTimeline.cpp
@@ -52,6 +52,10 @@ void AnimationTimeline::animationTimingDidChange(WebAnimation& animation)
         auto* timeline = animation.timeline();
         if (timeline && timeline != this)
             timeline->removeAnimation(animation);
+        else if (timeline == this && is<KeyframeEffect>(animation.effect())) {
+            if (auto styleable = downcast<KeyframeEffect>(animation.effect())->targetStyleable())
+                styleable->animationWasAdded(animation);
+        }
     }
 }
 
